# Custom-Electromagnetic-Actuator-Control-Library

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md  DESIGN_LINEAR.md  DESIGN_OPTIMIZER.md  FEM_PIPELINE.md  MCP_SERVER.md  PHYSICS_ENGINE_ANALYSIS.md  RL_CONTROL.md  VALIDATION.md
examples/configs/: linear_stepper_5coil.toml  linear_stepper_5coil_fem.toml  pendulum_softiron_1gate.toml
studies/femm_trends/: BUG_REVIEW.md  DETAILED_TRENDS.txt  README.md  TRENDS_ANALYSIS.txt  TRENDS_REPORT.md  bo_search.py  build_dashboard.py  cell_qc.jsonl  dashboard.html  detailed_trends.py  make_figures.py  run_study.py  study_lib.py  study_viz.py
studies/femm_trends/bo/: bo_eval_log.jsonl
studies/femm_trends/bo_rel/: bo_eval_log.jsonl
studies/femm_trends/results/: cell_0000.jsonl  cell_0001.jsonl  cell_0002.jsonl  cell_0003.jsonl  cell_0004.jsonl  cell_0005.jsonl  cell_0006.jsonl  cell_0007.jsonl  cell_0008.jsonl  cell_0009.jsonl  cell_0010.jsonl  cell_0011.jsonl  cell_0012.jsonl  cell_0013.jsonl  cell_0014.jsonl  cell_0015.jsonl  cell_0016.jsonl  cell_0017.jsonl  cell_0018.jsonl  cell_0019.jsonl  cell_0020.jsonl  cell_0021.jsonl  cell_0022.jsonl  cell_0023.jsonl  cell_0024.jsonl  cell_0025.jsonl  cell_0026.jsonl  cell_0027.jsonl  cell_0028.jsonl  cell_0029.jsonl  cell_0030.jsonl  cell_0031.jsonl  cell_0032.jsonl  cell_0033.jsonl  cell_0034.jsonl  cell_0035.jsonl  cell_0036.jsonl  cell_0037.jsonl  cell_0038.jsonl  cell_0039.jsonl  (+26 more)
studies/femm_trends/study/: start_epoch.txt
studies/femm_trends/study/luts/: cell_0000.npz  cell_0001.npz  cell_0002.npz  cell_0003.npz  cell_0004.npz  cell_0005.npz  cell_0006.npz  cell_0007.npz  cell_0008.npz  cell_0009.npz  cell_0010.npz  cell_0011.npz  cell_0012.npz  cell_0013.npz  cell_0014.npz  cell_0015.npz  cell_0016.npz  cell_0017.npz  cell_0018.npz  cell_0019.npz  cell_0020.npz  cell_0021.npz  cell_0022.npz  cell_0023.npz  cell_0024.npz  cell_0025.npz  cell_0026.npz  cell_0027.npz  cell_0028.npz  cell_0029.npz  cell_0030.npz  cell_0031.npz  cell_0032.npz  cell_0033.npz  (+239 more)
tests/: test_bo_search.py  test_cli_config.py  test_coil_design.py  test_config.py  test_config_summary.py  test_design_sensitivity.py  test_estimator.py  test_fem_analysis_regression.py  test_fem_cli.py  test_fem_convergence.py  test_fem_femm_backend.py  test_fem_from_config.py  test_fem_geometry.py  test_fem_lut.py  test_fem_plant_integration.py  test_fem_quality.py  test_fem_reference_backend.py  test_fem_sweep.py  test_fem_validate.py  test_gui_server.py  test_linear_config.py  test_linear_estimator.py  test_linear_plant.py  test_linear_simulator.py  test_linear_supervisor.py  test_mcp_server.py  test_numerical_accuracy.py  test_optimize_design.py  test_physics_validation.py  test_plant.py  test_reluctance_mode.py  test_rl_env.py  test_simulator.py  test_supervisor.py  test_visual.py  test_visual_cli_config.py  test_visual_config.py
tools/python/: run_phase0.py
tools/python/emac_sim/: __init__.py  cli.py  coil_design.py  config.py  config_summary.py  design_sensitivity.py  estimator.py  linear_cli.py  linear_estimator.py  linear_plant.py  linear_sim.py  linear_supervisor.py  mcp_server.py  numerics.py  optimize_design.py  plant.py  sim.py  supervisor.py  visual.py
tools/web/: optimizer_dashboard.html
(+301 files in other folders)
