[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emac-sim"
version = "0.1.0"
description = "Phase 0 host simulator for an electromagnetic actuator control library."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Custom Electromagnetic Actuator Control Library contributors" }
]
dependencies = [
  "matplotlib>=3.7",
  "numpy>=1.24",
  "scipy>=1.9",
  "tomli>=2.0.1; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]
mcp = [
  "mcp>=1.2.0"
]

[project.scripts]
emac-phase0 = "emac_sim.cli:main"
emac-sim = "emac_sim.cli:main"
emac-visual = "emac_sim.visual:main"
emac-optimize = "emac_sim.optimize_design:main"
emac-mcp = "emac_sim.mcp_server:main"

[tool.setuptools.packages.find]
where = ["tools/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools/python"]
addopts = "-ra"
asyncio_default_fixture_loop_scope = "function"
